# DESMAR-public

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  pyproject.toml  run_multi_asset_with_HRL_agent.sh  run_multi_asset_with_SPT_agent.sh  run_single_asset_multi_processes.sh  run_single_asset_singel_process.sh
LICENSES/: POLYFORM-NONCOMMERCIAL-1.0.0  README.md  SCOPE.md
Simulator_configs/config_templates/: SimulationKernel_configs_distributed_template.xml  SimulationKernel_configs_single_template.xml  sac_config.yaml
Simulator_configs/multi_assets_HRL_agent_filled/: SimulationKernel_configs_distributed_100001.xml  SimulationKernel_configs_distributed_100002.xml  SimulationKernel_configs_distributed_100003.xml
Simulator_configs/multi_assets_SPT_agent_filled/: SimulationKernel_configs_distributed_100001.xml  SimulationKernel_configs_distributed_100002.xml  SimulationKernel_configs_distributed_100003.xml
Simulator_configs/single_asset_config/: SimulationKernel_configs_single_asset_multi_processes.xml  SimulationKernel_configs_single_asset_singel_process.xml
TheSimulator/: CMakeLists.txt
TheSimulator/TheSimulator/: Agent.h  AgentRankRegistry.cpp  AgentRankRegistry.h  AgentRankRouter.cpp  AgentRankRouter.h  AgentRouterTime.cpp  AgentRouterTime.h  Book.cpp  Book.h  CMakeLists.txt  CppAgentBatch.cpp  CppAgentBatch.h  CppCrossBehavioralSPTAgent.cpp  CppCrossBehavioralSPTAgent.h  CppCrossDataFactoryAgent.cpp  CppCrossDataFactoryAgent.h  CppCrossRLAgent.cpp  CppCrossRLAgent.h  CppCrossTestAgent.cpp  CppCrossTestAgent.h  CppCrossTradingAgent.cpp  CppCrossTradingAgent.h  CppHeuristicBeliefLearningAgent.cpp  CppHeuristicBeliefLearningAgent.h  CppMarketMakerAgent.cpp  CppMarketMakerAgent.h  CppMomentumAgent.cpp  CppMomentumAgent.h  CppNoiseAgent.cpp  CppNoiseAgent.h  CppTestAgent.cpp  CppTestAgent.h  CppTradingAgent.cpp  CppTradingAgent.h  CppZeroIntelligenceAgent.cpp  CppZeroIntelligenceAgent.h  CrossAgentRankRouter.cpp  CrossAgentRankRouter.h  CrossBDQPolicy.h  CrossSACPolicy.h  (+55 more)
TheSimulator/TheSimulator/dimcli/: cli.cpp  cli.h
TheSimulator/TheSimulator/pugi/: pugixml.cpp
rl_modules/: __init__.py  bdq_agent.py  bdq_networks.py  experience_replay.py  export_torchscript_from_pth.py  learner_mpi.py  policy_networks.py  sac_agent.py
scripts/: mpmd_segment_launcher.sh
